--- a/styles/styles.css
+++ b/styles/styles.css
@@ -261,12 +261,9 @@ strong {
   font-weight: 700;
 }
 
-/* ===== BUTTON STYLES ===== */
-
-/* Button base styles (shared by all buttons) */
+/* buttons - base styles */
 a.button:any-link,
-button.button,
-.button.block a {
+button.button {
   box-sizing: border-box;
   display: inline-block;
   max-width: 100%;
@@ -286,55 +283,117 @@ button.button,
   white-space: nowrap;
 }
 
-/* Primary button - default (light scheme) */
+/* Primary button */
 a.button.primary:any-link,
-button.primary,
-.button.block.primary a {
-  background-color: var(--dark-red-color);
-  color: var(--light-color);
+button.primary {
+  background-color: #902a2b;
+  color: #fff;
   border-color: transparent;
 }
 
 a.button.primary:hover,
 a.button.primary:focus,
 button.primary:hover,
-button.primary:focus,
-.button.block.primary a:hover,
-.button.block.primary a:focus {
-  background-color: var(--light-color);
-  border-color: var(--dark-red-color);
+button.primary:focus {
+  background-color: #fff;
+  border-color: #902a2b;
+  color: #902a2b;
+  cursor: pointer;
 }
 
-/* Secondary button - default (light scheme) */
+/* Secondary button */
 a.button.secondary:any-link,
-button.secondary,
-.button.block.secondary a {
+button.secondary {
   background-color: transparent;
-  border-color: var(--light-color);
+  border: 2px solid #902a2b;
+  color: #902a2b;
 }
 
 a.button.secondary:hover,
 a.button.secondary:focus,
 button.secondary:hover,
-button.secondary:focus,
-.button.block.secondary a:hover,
-.button.block.secondary a:focus {
+button.secondary:focus {
   background-color: #fff;
 }
 
-/* Dark scheme - Primary button (transparent with white border) */
-.dark-scheme a.button.primary:any-link,
-.dark-scheme button.primary,
+/* Button block styles (Universal Editor component) - base states */
+.button.block.primary a,
+.button.block.secondary a {
+  box-sizing: border-box;
+  display: inline-block;
+  margin: 12px 0;
+  border-radius: 2.4em;
+  padding: 0.5em 1.2em;
+  font-family: var(--body-font-family);
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.25;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.button.block.primary a {
+  border: 2px solid transparent;
+  background-color: #902a2b;
+  color: #fff;
+}
+
+.button.block.secondary a {
+  border: 2px solid #902a2b;
+  background-color: transparent;
+  color: #902a2b;
+}
+
+/* Button block scheme variants - base states */
+.light-scheme .button.block.primary a {
+  background-color: #902a2b;
+  color: #fff;
+}
+
+.light-scheme .button.block.secondary a {
+  background-color: transparent;
+  border-color: #902a2b;
+  color: #902a2b;
+}
+
 .dark-scheme .button.block.primary a {
   background-color: transparent;
   color: #fff;
   border-color: #fff;
 }
 
-.dark-scheme a.button.primary:hover,
-.dark-scheme a.button.primary:focus,
-.dark-scheme button.primary:hover,
-.dark-scheme button.primary:focus,
+.dark-scheme .button.block.secondary a {
+  background-color: #fff;
+  border-color: #902a2b;
+  color: #902a2b;
+}
+
+/* Button block hover/focus states */
+.button.block.primary a:hover,
+.button.block.primary a:focus {
+  background-color: #fff;
+  border-color: #902a2b;
+  color: #902a2b;
+}
+
+.button.block.secondary a:hover,
+.button.block.secondary a:focus {
+  background-color: #fff;
+}
+
+.light-scheme .button.block.primary a:hover,
+.light-scheme .button.block.primary a:focus {
+  background-color: #fff;
+  border-color: #902a2b;
+  color: #902a2b;
+}
+
+.light-scheme .button.block.secondary a:hover,
+.light-scheme .button.block.secondary a:focus {
+  background-color: #fff;
+}
+
 .dark-scheme .button.block.primary a:hover,
 .dark-scheme .button.block.primary a:focus {
   background-color: #fff;
@@ -342,12 +401,37 @@ button.secondary:focus,
   color: #902a2b;
 }
 
-/* Dark scheme - Secondary button (white with red border) */
-.dark-scheme a.button.secondary:any-link,
-.dark-scheme button.secondary,
-.dark-scheme .button.block.secondary a {
+.dark-scheme .button.block.secondary a:hover,
+.dark-scheme .button.block.secondary a:focus {
   background-color: #fff;
-  border-color: #902a2b;
+}
+
+/* Scheme button base states */
+.light-scheme a.button.primary:any-link,
+.light-scheme button.primary {
+  background-color: #902a2b;
+  color: #fff;
+  border-color: transparent;
+}
+
+.dark-scheme a.button.primary:any-link,
+.dark-scheme button.primary {
+  background-color: transparent;
+  color: #fff;
+  border-color: #fff;
+}
+
+.light-scheme a.button.secondary:any-link,
+.light-scheme button.secondary {
+  background-color: transparent;
+  border: 2px solid #902a2b;
+  color: #902a2b;
+}
+
+.dark-scheme a.button.secondary:any-link,
+.dark-scheme button.secondary {
+  background-color: #fff;
+  border: 2px solid #902a2b;
   color: #902a2b;
 }
 
@@ -358,9 +442,42 @@ button.primary:disabled:hover {
   cursor: unset;
 }
 
-/* Hide arrow icons on secondary buttons unless arrow-right-white or arrow-right-red */
-.button.secondary .icon:not(.icon-arrow-right-white, .icon-arrow-right-red),
-a.button.secondary .icon:not(.icon-arrow-right-white, .icon-arrow-right-red) {
+/* Scheme button hover/focus states */
+.light-scheme a.button.primary:hover,
+.light-scheme a.button.primary:focus,
+.light-scheme button.primary:hover,
+.light-scheme button.primary:focus {
+  background-color: #fff;
+  border-color: #902a2b;
+  color: #902a2b;
+}
+
+.dark-scheme a.button.primary:hover,
+.dark-scheme a.button.primary:focus,
+.dark-scheme button.primary:hover,
+.dark-scheme button.primary:focus {
+  background-color: #fff;
+  border-color: #fff;
+  color: #902a2b;
+}
+
+.light-scheme a.button.secondary:hover,
+.light-scheme a.button.secondary:focus,
+.light-scheme button.secondary:hover,
+.light-scheme button.secondary:focus {
+  background-color: #fff;
+}
+
+.dark-scheme a.button.secondary:hover,
+.dark-scheme a.button.secondary:focus,
+.dark-scheme button.secondary:hover,
+.dark-scheme button.secondary:focus {
+  background-color: #fff;
+}
+
+/* Remove arrow icon from secondary buttons unless arrow-right-white or arrow-right-red is used */
+.light-scheme button.secondary .icon:not(.icon-arrow-right-white, .icon-arrow-right-red),
+.light-scheme a.button.secondary .icon:not(.icon-arrow-right-white, .icon-arrow-right-red) {
   display: none;
 }
 
