--- a/styles/styles.css
+++ b/styles/styles.css
@@ -313,7 +313,8 @@ a.button.secondary:hover,
 a.button.secondary:focus,
 button.secondary:hover,
 button.secondary:focus {
-  background-color: #fff;
+  background-color: var(--light-color);
+  border-color: var(--dark-red-color);
 }
 
 /* Button block styles (Universal Editor component) - base states */
@@ -378,6 +379,7 @@ button.secondary:focus {
 .button.block.secondary a:hover,
 .button.block.secondary a:focus {
   background-color: var(--light-color);
+  border-color: var(--dark-red-color);
 }
 
 .light-scheme .button.block.primary a:hover,
