--- a/templates/mayura/mayura.css
+++ b/templates/mayura/mayura.css
@@ -19,3 +19,16 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: rgba(0, 0, 0, 0);
 }
+
+.mayura .banner-heading h2 {
+  background: #fbf8f2;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: rgba(0, 0, 0, 0);
+  text-align: left;
+}
+
+.mayura .table-container .button-container:first-child {
+  text-align: center;
+  padding-top: 20px;
+}
