--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,6 +24,8 @@
   --dark-red-color: #9c1d26;
   --dark-red-link-color:#801c1e;
   --red-color: #d13d3f;
+  --btn-dark-red-color: #902a2b;
+  --btn-light-color: white;
   --gradient-upi-steps-red: linear-gradient(165deg, #ca0919 0%, #8C2034 40%, #732C53 80%, #513873 100%);
   --gradient-tabs-upi-link-red: radial-gradient(at top left, #AC2A34 0%, #661E2A 50%, #140F23 100%);
   --gradient-important-documents: linear-gradient(to bottom, #C5767D, #9E1E29);
@@ -286,7 +288,7 @@ button.button {
 /* Primary button */
 a.button.primary:any-link,
 button.primary {
-  background-color: #902a2b;
+  background-color: var(--btn-dark-red-color);
   color: #fff;
   border-color: transparent;
 }
@@ -295,9 +297,9 @@ a.button.primary:hover,
 a.button.primary:focus,
 button.primary:hover,
 button.primary:focus {
-  background-color: #fff;
-  border-color: #902a2b;
-  color: #902a2b;
+  background-color: var(--btn-light-color);
+  border-color: var(--btn-dark-red-color);
+  color: var(--btn-dark-red-color);
   cursor: pointer;
 }
 
@@ -352,92 +354,92 @@ button.secondary:focus {
 }
 
 .light-scheme .button.block.secondary a {
-  background-color: var(--dark-red-color);
+  background-color: var(--btn-dark-red-color);
   border-color: var(--dark-red-color);
 }
 
 .dark-scheme .button.block.primary a {
-  background-color: var(--light-color);
+  background-color: var(--btn-light-color);
   border-color: var(--light-color);
 }
 
 .dark-scheme .button.block.secondary a {
   background-color: transparent;
-  border-color: var(--light-color);
-  color: var(--light-color);
+  border-color: var(--btn-light-color);
+  color: var(--btn-light-color);
 }
 
 /* Button block hover/focus states */
 .button.block.primary a:hover,
 .button.block.primary a:focus {
-  background-color: var(--light-color);
-  border-color: var(--dark-red-color);
-  color: var(--dark-red-color);
+  background-color: var(--btn-light-color);
+  border-color: var(--btn-dark-red-color);
+  color: var(--btn-dark-red-color);
 }
 
 .button.block.secondary a:hover,
 .button.block.secondary a:focus {
-  background-color: var(--light-color);
+  background-color: var(--btn-light-color);
 }
 
 .light-scheme .button.block.primary a:hover,
 .light-scheme .button.block.primary a:focus {
-  background-color: var(--light-color);
-  border-color: var(--dark-red-color);
-  color: var(--dark-red-color);
+  background-color: var(--btn-light-color);
+  border-color: var(--btn-dark-red-color);
+  color: var(--btn-dark-red-color);
 }
 
 .light-scheme .button.block.secondary a:hover,
 .light-scheme .button.block.secondary a:focus {
-  background-color: var(--light-color);
+  background-color: var(--btn-light-color);
 }
 
 .dark-scheme .button.block.primary a:hover,
 .dark-scheme .button.block.primary a:focus {
-  background-color: var(--light-color);
+  background-color: var(--btn-light-color);
   border-color: transparent;
-  color: var(--dark-red-color);
+  color: var(--btn-dark-red-color);
 }
 
 .dark-scheme .button.block.secondary a:hover,
 .dark-scheme .button.block.secondary a:focus {
   background-color: transparent;
-  border-color: var(--light-color);
-  color: var(--light-color);
+  border-color: var(--btn-light-color);
+  color: var(--btn-light-color);
 }
 
 /* Scheme button base states */
 .light-scheme a.button.primary:any-link,
 .light-scheme button.primary {
-  background-color: var(--dark-red-color);
-  color: var(--light-color);
+  background-color: var(--btn-dark-red-color);  
+  color: var(--btn-light-color);
   border-color: transparent;
 }
 
 .dark-scheme a.button.primary:any-link,
 .dark-scheme button.primary {
-  background-color: var(--light-color);
+  background-color: var(--btn-light-color);
   border-color: transparent;
 }
 
 .light-scheme a.button.secondary:any-link,
 .light-scheme button.secondary {
   background-color: transparent;
-  border: 2px solid var(--dark-red-color);
-  color: var(--dark-red-color);
+  border: 2px solid var(--btn-dark-red-color);
+  color: var(--btn-dark-red-color);
 }
 
 .dark-scheme a.button.secondary:any-link,
 .dark-scheme button.secondary {
   background-color: transparent;
-  border: 2px solid var(--light-color);
-  color: var(--light-color);
+  border: 2px solid var(--btn-light-color);
+  color: var(--btn-light-color);
 }
 
 /* Disabled button states */
 button.primary:disabled,
 button.primary:disabled:hover {
-  background-color: var(--light-color);
+  background-color: var(--btn-light-color);
   cursor: unset;
 }
 
@@ -446,16 +448,16 @@ button.primary:disabled:hover {
 .light-scheme a.button.primary:focus,
 .light-scheme button.primary:hover,
 .light-scheme button.primary:focus {
-  background-color: var(--light-color);
-  border-color: var(--dark-red-color);
-  color: var(--dark-red-color); 
+  background-color: var(--btn-light-color);
+  border-color: var(--btn-dark-red-color);
+  color: var(--btn-dark-red-color); 
 }
 
 .dark-scheme a.button.primary:hover,
 .dark-scheme a.button.primary:focus,
 .dark-scheme button.primary:hover,
 .dark-scheme button.primary:focus {
-  background-color: var(--light-color);
+  background-color: var(--btn-light-color);
   border-color: transparent;
 }
 
@@ -463,7 +465,7 @@ button.primary:disabled:hover {
 .light-scheme a.button.secondary:focus,
 .light-scheme button.secondary:hover,
 .light-scheme button.secondary:focus {
-  background-color: var(--light-color);
+  background-color: var(--btn-light-color);
 }
 
 .dark-scheme a.button.secondary:hover,
