--- a/styles/styles.css
+++ b/styles/styles.css
@@ -289,7 +289,7 @@ button.button {
 a.button.primary:any-link,
 button.primary {
   background-color: var(--btn-dark-red-color);
-  color: #fff;
+  color: var(--btn-light-color);
   border-color: transparent;
 }
 
@@ -307,15 +307,15 @@ button.primary:focus {
 a.button.secondary:any-link,
 button.secondary {
   background-color: transparent;
-  border: 2px solid var(--dark-red-color);
-  color: var(--dark-red-color);
+  border: 2px solid var(--btn-dark-red-color);
+  color: var(--btn-dark-red-color);
 }
 
 a.button.secondary:hover,
 a.button.secondary:focus,
 button.secondary:hover,
 button.secondary:focus {
-  background-color: var(--light-color);
+  background-color: var(--btn-light-color);
 }
 
 /* Button block styles (Universal Editor component) - base states */
@@ -336,31 +336,31 @@ button.secondary:focus {
 }
 
 .button.block.primary a {
+  background-color: var(--btn-dark-red-color);
   border: 2px solid transparent;
-  background-color: var(--dark-red-color);
-  color: var(--light-color);
+  color: var(--btn-light-color);
 }
 
 .button.block.secondary a {
-  border: 2px solid var(--dark-red-color);
   background-color: transparent;
-  color: var(--dark-red-color);
+  border: 2px solid var(--btn-dark-red-color);
+  color: var(--btn-dark-red-color);
 }
 
 /* Button block scheme variants - base states */
 .light-scheme .button.block.primary a {
-  background-color: var(--dark-red-color);
-  color: var(--light-color);
+  background-color: var(--btn-dark-red-color);
+  color: var(--btn-light-color);
 }
 
 .light-scheme .button.block.secondary a {
   background-color: var(--btn-dark-red-color);
-  border-color: var(--dark-red-color);
+  border-color: var(--btn-dark-red-color);
 }
 
 .dark-scheme .button.block.primary a {
   background-color: var(--btn-light-color);
-  border-color: var(--light-color);
+  border-color: var(--btn-light-color);
 }
 
 .dark-scheme .button.block.secondary a {
@@ -392,6 +392,8 @@ button.secondary:focus {
 .light-scheme .button.block.secondary a:hover,
 .light-scheme .button.block.secondary a:focus {
   background-color: var(--btn-light-color);
+  border-color: var(--btn-light-color);
+  color: var(--btn-dark-red-color);
 }
 
 .dark-scheme .button.block.primary a:hover,
@@ -411,7 +413,7 @@ button.secondary:focus {
 /* Scheme button base states */
 .light-scheme a.button.primary:any-link,
 .light-scheme button.primary {
-  background-color: var(--btn-dark-red-color);  
+  background-color: var(--btn-dark-red-color);
   color: var(--btn-light-color);
   border-color: transparent;
 }
@@ -473,8 +475,8 @@ button.primary:disabled:hover {
 .dark-scheme button.secondary:hover,
 .dark-scheme button.secondary:focus {
   background-color: transparent;
-  border-color: var(--light-color);
-  color: var(--light-color);
+  border-color: var(--btn-light-color);
+  color: var(--btn-light-color);
 }
 
 /* Remove arrow icon from secondary buttons unless arrow-right-white or arrow-right-red is used */
