--- a/styles/styles.css
+++ b/styles/styles.css
@@ -408,9 +408,9 @@ button.secondary:focus {
 
 .dark-scheme .button.block.secondary a:hover,
 .dark-scheme .button.block.secondary a:focus {
-  background-color: var(--btn-dark-red-color);
+  background-color: var(--btn-light-color);
   border-color: var(--btn-light-color);
-  color: var(--btn-light-color);
+  color: var(--btn-dark-red-color);
 }
 
 /* Scheme button base states */
@@ -478,9 +478,9 @@ button.primary:disabled:hover {
 .dark-scheme a.button.secondary:focus,
 .dark-scheme button.secondary:hover,
 .dark-scheme button.secondary:focus {
-  background-color: transparent;
+  background-color: var(--btn-light-color);
   border-color: var(--btn-light-color);
-  color: var(--btn-light-color);
+  color: var(--btn-dark-red-color);
 }
 
 /* Remove arrow icon from secondary buttons unless arrow-right-white or arrow-right-red is used */
