--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1258,6 +1258,7 @@ header nav[aria-expanded='true'] .mobile-customer-service-odometer {
   display: none;
   overflow-y: auto;
   max-height: calc(100vh - var(--nav-height));
+  padding-top: 30px;
 }
 
 .cs-dropdown.open {
