--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1273,7 +1273,7 @@ header nav[aria-expanded='true'] .mobile-customer-service-odometer {
 .cs-dropdown-overlay {
   position: fixed;
   inset: 0;
-  background: rgb(0 0 0 / 40%);
+  background: transparent;
   z-index: 1000;
   display: none;
 }
