--- a/blocks/hero-heritage-cc/hero-heritage-cc.css
+++ b/blocks/hero-heritage-cc/hero-heritage-cc.css
@@ -763,6 +763,7 @@ main[data-aue-resource] .hero-heritage-cc-banner::before {
 }
 
 /* Override absolute positioning in UE - make sections flow normally */
+main[data-aue-resource] .hero-heritage-cc-header-cta,
 main[data-aue-resource] .hero-heritage-cc-intro,
 main[data-aue-resource] .hero-heritage-cc-banner {
   position: relative;
@@ -773,8 +774,12 @@ main[data-aue-resource] .hero-heritage-cc-banner {
   opacity: 1 !important;
   visibility: visible !important;
   z-index: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
+main[data-aue-resource] .hero-heritage-cc-header-cta > div,
 main[data-aue-resource] .hero-heritage-cc-intro > div,
 main[data-aue-resource] .hero-heritage-cc-banner > div,
 main[data-aue-resource] .hero-heritage-cc .hero-heritage-cc-intro > div,
